tests/baselines/reference/ES5For-of20(strict=true).errors.txt
ES5For-of20.ts(3,14): error TS7022: 'v' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
ES5For-of20.ts(3,20): error TS2448: Block-scoped variable 'v' used before its declaration.
ES5For-of20.ts(4,15): error TS1155: 'const' declarations must be initialized.
ES5For-of20.ts(4,15): error TS7005: Variable 'v' implicitly has an 'any' type.


==== ES5For-of20.ts (4 errors) ====
    for (let v of []) {
        let v;
        for (let v of [v]) {
                 ~
!!! error TS7022: 'v' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                       ~
!!! error TS2448: Block-scoped variable 'v' used before its declaration.
!!! related TS2728 ES5For-of20.ts:3:14: 'v' is declared here.
            const v;
                  ~
!!! error TS1155: 'const' declarations must be initialized.
                  ~
!!! error TS7005: Variable 'v' implicitly has an 'any' type.
        }
    }